--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,9 +4,9 @@ term xterm-256color
 # font_family Inconsolata Medium 
 # bold_font Inconsolata SemiBold
 font_family  Caskaydia Cove Nerd Font Complete Mono
-bold_font Fira Code SemiBold
+bold_font Caskaydia Cove Nerd Font Complete Mono
 
-font_size 11.5
+font_size 11
 adjust_line_height 10 
 copy_on_select yes
 command_on_bell none
