--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,5 @@
-include ~/.config/nvim/kitty/solarized8_flat_theme.conf
+#include ~/.config/nvim/kitty/solarized8_flat_theme.conf
+include ~/.config/nvim/kitty/toast_theme.conf
 editor nvim
 term xterm-256color
 # font_family Inconsolata Medium 
