--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,10 +2,8 @@
 include ~/.config/nvim/kitty/toast_theme.conf
 editor nvim
 term xterm-256color
-# font_family Inconsolata Medium 
-# bold_font Inconsolata SemiBold
+bold_font Fira Code SemiBold
 font_family  Caskaydia Cove Nerd Font Complete Mono
-bold_font Caskaydia Cove Nerd Font Complete Mono
 
 font_size 11
 adjust_line_height 10 
