--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,7 +4,7 @@
 editor nvim
 term xterm-256color
 bold_font Fira Code SemiBold
-font_family  Caskaydia Cove Nerd Font Complete Mono
+font_family JetBrains Mono Medium Medium Nerd Font Complete Mono  
 
 font_size 11
 adjust_line_height 10 
