--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,7 +3,8 @@
 #include ~/.config/nvim/kitty/toast_theme.conf
 editor nvim
 term xterm-256color
-bold_font Fira Code SemiBold
+# bold_font Fira Code SemiBold
+bold_font JetBrains Mono Bold Nerd Font Complete Mono
 font_family JetBrains Mono Medium Medium Nerd Font Complete Mono  
 
 font_size 10.5
