--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,7 +4,7 @@
 editor nvim
 term xterm-256color
 # bold_font Fira Code SemiBold
-bold_font JetBrains Mono Bold Nerd Font Complete Mono
+bold_font Recursive Bold 
 font_family JetBrains Mono Medium Medium Nerd Font Complete Mono  
 
 font_size 10
