--- a/kitty/onedark_dark_theme.conf
+++ b/kitty/onedark_dark_theme.conf
@@ -1,27 +1,20 @@
-foreground #979eab
-background #1f2329
-
-color0 #282c34
-color1 #e06c75
-color2 #98c379
-color3 #e5c07b
-color4 #61afef
-color5 #be5046
-color6 #56b6c2
-color7 #979eab
-color8 #393e48
-color9 #d19a66
-color10 #56b6c2
-color11 #e5c07b
-color12 #61afef
-color13 #be5046
-color14 #56b6c2
-color15 #abb2bf
-
-# Tab Bar
-
-active_border_color #43646c
-inactive_border_color #19404a
-window_border_width 1.0
-inactive_tab_foreground #abb2bf
-inactive_tab_background #282c34
+background #002b36
+foreground #769ca5
+cursor #b2b8c3
+selection_background #88a9b2
+color0 #000000
+color8 #767676
+color1 #ee2a29
+color9 #dc5b60
+color2 #3fa33f
+color10 #70be71
+color3 #fee92e
+color11 #fef063
+color4 #1d80ef
+color12 #53a4f3
+color5 #8800a0
+color13 #a94dbb
+color6 #16aec9
+color14 #42c6d9
+color7 #a4a4a4
+color15 #fffefe
