--- a/kitty/onedark_dark_theme.conf
+++ b/kitty/onedark_dark_theme.conf
@@ -18,3 +18,8 @@ color6 #16aec9
 color14 #42c6d9
 color7 #a4a4a4
 color15 #fffefe
+
+
+active_border_color #43646c
+inactive_border_color #19404a
+window_border_width 1.0
