--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,11 +4,14 @@
 editor nvim
 term xterm-256color
 # bold_font Fira Code SemiBold
-bold_font Recursive Bold 
-font_family JetBrains Mono Medium Medium Nerd Font Complete Mono  
+# bold_font Recursive Bold 
+# font_family JetBrains Mono Medium Medium Nerd Font Complete Mono  
 
-font_size 9
-adjust_line_height 9
+bold_font Inconsolata-Bold 
+font_family Inconsolata-SemiBold 
+
+font_size 10
+adjust_line_height 8
 copy_on_select yes
 command_on_bell none
 enable_audio_bell no
