--- a/kitty/onedark_light_theme.conf
+++ b/kitty/onedark_light_theme.conf
@@ -1,7 +1,7 @@
 window_border_width 0.4
 active_border_color red
 inactive_border_color #002b36
-background            #f8f0dc
+background            #F5F5DC
 foreground            #503f4e
 cursor                #ff6900
 selection_background  #67928c
