--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,10 +7,10 @@ term xterm-256color
 # bold_font Recursive Bold 
 # font_family JetBrains Mono Medium Medium Nerd Font Complete Mono  
 
-bold_font Inconsolata-Bold 
-font_family Inconsolata-SemiBold 
+bold_font JetBrains Mono Medium Medium Nerd Font Complete Mono 
+font_family JetBrains Mono SemiBold 
 
-font_size 11
+font_size 10
 adjust_line_height 8
 copy_on_select yes
 command_on_bell none
